# NYSS-Transport

./: .gitignore  README.md
Backend/: README.md  database.py
Backend/API/: pyproject.toml
Backend/API/app/: database_filler.py
Backend/API/app/api/: user_resource.py
Backend/API/app/repository/: admin_repository.py  commuter_repository.py  database.py
Backend/API/app/service/: admin_service.py  commuter_service.py  exceptions.py
Backend/API/app/service/dtos/: admin_dtos.py  commuter_dtos.py
Backend/Database/: database.py  sql_utils.py
Backend/Database/db_scripts/: drop.sql  up.sql
Backend/db_scripts/: drop.sql  up.sql
Backend/static/: styles.css
Frontend/: README.md  package-lock.json  package.json
Frontend/src/: App.vue  Objects.js  TopBar.vue  Users.js  main.js
Frontend/src/api/: SignUpApi.js  access.js  getuser.js  login.js  payment.js  signup.js  transactions.js  url.js
Frontend/src/assets/: logo.js
Frontend/src/components/: HelloWorld.vue
Frontend/src/components/Access/: AccessCard.vue  AccessContainer.vue
Frontend/src/components/CommuterProfile/: PaymentMethod.vue  PaymentMethodForm.vue  QRCodeTicket.vue  Transaction.vue  TransactionCard.vue  TransactionContainer.vue  UserInfo.vue
Frontend/src/router/: index.js
Frontend/src/views/: HomeView.vue
Frontend/src/views/Authentication/: LogIn.vue  SignUp.vue
Frontend/src/views/HomeView/: AccessCard.vue  AccessContainer.vue  AdminView.vue  HomeView.vue  SearchSideBar.vue
Frontend/src/views/UserView/: UserView.vue
Frontend/src/views/userView/: UserView.vue  paymentMethod.vue
(+22 files in other folders)
