[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Yannick Andre Ouamba <yannick-andre.ouamba.1@ulaval.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.2"
flask-cors = "4.0.0"
pymysql = "^1.1.0"
cryptography = "^42.0.5"
bcrypt = "^4.1.2"
python-dotenv = "1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
